--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,7 @@ pipeline:
 
   rancher:
     image: peloton/drone-rancher
-    url: drone.zi.gy
+    url: http://admin.zi.gy
     access_key: ${RANCHER_ACCESS_KEY}
     secret_key: ${RANCHER_SECRET_KEY}
     service: lb-mongo/api
