--- a/.drone.yml
+++ b/.drone.yml
@@ -19,4 +19,5 @@ pipeline:
     access_key: ${RANCHER_ACCESS_KEY}
     secret_key: ${RANCHER_SECRET_KEY}
     service: lb-mongo/api
+    docker_image: aafrey/drone-lb-test:0.0.1-${DRONE_COMMIT_SHA:0:7}
     secrets: [ rancher_access_key, rancher_secret_key ]
